--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -293,6 +293,106 @@ footer {
   z-index: 2;
 }
 
+.css-sticky {
+  position: -webkit-sticky;
+  position: sticky;
+}
+.nav {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 52px;
+  min-width: 1024px;
+  z-index: 9997;
+  height: 3.05882rem;
+}
+
+@media only screen and (max-width: 734px) {
+  .nav {
+    height: 2.82353rem;
+  }
+}
+
+@media only screen and (max-width: 1044px) {
+  .nav {
+    min-width: 320px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .nav {
+    height: 48px;
+  }
+}
+
+.nav-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+  min-height: 100%;
+  z-index: 1;
+}
+.nav-content-wrapper {
+  margin: 0 auto;
+  max-width: 980px;
+  padding: 0 22px;
+  position: relative;
+  z-index: 2;
+}
+
+.nav-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.nav-menu {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.nav-title {
+  color: #1d1d1f;
+  font-size: 21px;
+  line-height: 1.14286;
+  font-weight: 600;
+  letter-spacing: 0.011em;
+  cursor: default;
+  display: block;
+  float: left;
+  margin: 14px 0 -14px;
+  padding: 0;
+  height: 52px;
+  white-space: nowrap;
+}
+
+a.nav-title:hover {
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.nav-item-wrapper {
+  margin: 0px 5px;
+  padding: 6px 15px;
+  border-radius: 10px;
+}
+
+.nav-item-content {
+  font-size: 15px;
+  font-weight: 600;
+  text-decoration: none !important;
+  color: #676b5f;
+}
+
+.nav-item-wrapper:hover {
+  background: var(--gray-primary);
+}
+
 .main {
   padding: 0;
   overflow-x: hidden
@@ -652,14 +752,14 @@ html.js .tile.large-loaded .image {
 
 @media only screen and (max-width: 1068px) {
   .more-from-newsroom {
-    padding-top: 64px;
+    padding-top: 14px;
     padding-bottom: 64px
   }
 }
 
 @media only screen and (max-width: 734px) {
   .more-from-newsroom {
-    padding-top: 40px;
+    padding-top: 10px;
     padding-bottom: 52px
   }
 }
@@ -5612,4 +5712,10 @@ html.no-touch.no-reduced-motion .tile.tile-list[data-focus-method=key] .media--v
 .icon.icon-arrowdown::after {
   font-family: "social-media-font" !important;
   content: ""
+}
+
+
+.code pre {
+  border-radius: 8px;
+  padding: .3em 1em;
 }
