--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,7 +3,7 @@ import { SITE_TITLE } from "../consts";
 ---
 
 
-<nav class="nav .css-sticky">
+<nav class="nav">
   <div class="nav-wrapper">
     <div class="nav-content-wrapper">
       <div class="nav-content">
