--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -57,7 +57,8 @@ address,
 caption,
 th,
 figcaption {
-  font-size: 1em;
+  font-size: 16px;
+  font-family: SF Mono, monaco, -apple-system, roboto mono, monospace;
   font-weight: normal;
   font-style: normal
 }
@@ -297,6 +298,7 @@ footer {
   position: -webkit-sticky;
   position: sticky;
 }
+
 .nav {
   position: relative;
   top: 0;
@@ -308,9 +310,41 @@ footer {
   height: 3.05882rem;
 }
 
+.nav-title {
+  color: #1d1d1f;
+  font-size: 21px;
+  line-height: 1.14286;
+  font-weight: 600;
+  letter-spacing: 0.011em;
+  cursor: default;
+  display: block;
+  float: left;
+  margin: 14px 0 -14px;
+  padding: 0;
+  height: 52px;
+  white-space: nowrap;
+}
+
+
+.nav-item-content {
+  font-size: 15px;
+  font-weight: 600;
+  text-decoration: none !important;
+  color: #676b5f;
+}
+
 @media only screen and (max-width: 734px) {
   .nav {
     height: 2.82353rem;
+  }
+
+  .nav-title {
+    font-size: 21px;
+    line-height: 21px;
+  }
+
+  .nav-item-content {
+    font-size: 14px;
   }
 }
 
@@ -335,6 +369,7 @@ footer {
   min-height: 100%;
   z-index: 1;
 }
+
 .nav-content-wrapper {
   margin: 0 auto;
   max-width: 980px;
@@ -356,20 +391,7 @@ footer {
   align-items: center;
 }
 
-.nav-title {
-  color: #1d1d1f;
-  font-size: 21px;
-  line-height: 1.14286;
-  font-weight: 600;
-  letter-spacing: 0.011em;
-  cursor: default;
-  display: block;
-  float: left;
-  margin: 14px 0 -14px;
-  padding: 0;
-  height: 52px;
-  white-space: nowrap;
-}
+
 
 a.nav-title:hover {
   cursor: pointer;
@@ -382,12 +404,6 @@ a.nav-title:hover {
   border-radius: 10px;
 }
 
-.nav-item-content {
-  font-size: 15px;
-  font-weight: 600;
-  text-decoration: none !important;
-  color: #676b5f;
-}
 
 .nav-item-wrapper:hover {
   background: var(--gray-primary);
@@ -4794,11 +4810,6 @@ html.no-touch.no-reduced-motion .tile.tile-list[data-focus-method=key] .media--v
   width: 980px
 }
 
-.component {
-  margin-top: 44px;
-  margin-bottom: 44px
-}
-
 .component::before,
 .component::after {
   content: ' ';
@@ -4833,6 +4844,33 @@ html.no-touch.no-reduced-motion .tile.tile-list[data-focus-method=key] .media--v
   }
 }
 
+.component {
+  margin-top: 44px;
+  margin-bottom: 44px
+}
+
+@media only screen and (max-width: 1068px) {
+  .component {
+    margin-top: 36px;
+    margin-bottom: 36px
+  }
+}
+
+@media only screen and (max-width: 734px) {
+  .component {
+    margin-top: 32px;
+    margin-bottom: 32px
+  }
+}
+
+@media only screen and (max-width: 734px) {
+  .component {
+    max-width: 414px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto
+  }
+}
 
 
 
@@ -5667,28 +5705,6 @@ html.no-touch.no-reduced-motion .tile.tile-list[data-focus-method=key] .media--v
   opacity: 1
 }
 
-.image-asset {
-  width: 100%;
-  padding-top: 66.63265%;
-  height: auto;
-}
-
-@media only screen and (max-width: 1068px) {
-  .image-asset {
-    width: 100%;
-    padding-top: 66.6185%;
-    height: auto;
-  }
-}
-
-@media only screen and (max-width: 734px) {
-  .image-asset {
-    width: 100%;
-    padding-top: 66.58653%;
-    height: auto;
-  }
-}
-
 
 .picture-image {
   display: inline-block;
@@ -5718,4 +5734,154 @@ html.no-touch.no-reduced-motion .tile.tile-list[data-focus-method=key] .media--v
 .code pre {
   border-radius: 8px;
   padding: .3em 1em;
+}
+
+
+.theme-dark {
+  background-color: #000;
+  color: #f5f5f7
+}
+
+.theme-dark h1,
+.theme-dark h2,
+.theme-dark h3,
+.theme-dark h4,
+.theme-dark h5,
+.theme-dark h6 {
+  color: #f5f5f7
+}
+
+.theme-dark a,
+.theme-dark .link {
+  color: #2997ff
+}
+
+.theme-dark .footnote a {
+  color: inherit
+}
+
+.theme-dark .footnote a:hover {
+  color: #2997ff
+}
+
+.theme-dark a.block {
+  color: inherit
+}
+
+.theme-dark a.block .block-link {
+  color: #2997ff
+}
+
+.theme-dark .dotnav .dotnav-item {
+  background-color: rgba(134, 134, 139, 0.4)
+}
+
+.theme-dark .dotnav .dotnav-item:hover {
+  background-color: rgba(134, 134, 139, 0.6)
+}
+
+.theme-dark .dotnav .dotnav-item.current {
+  background-color: #86868b
+}
+
+.theme-dark .paddlenav .paddlenav-arrow {
+  background-color: rgba(0, 0, 0, 0);
+  color: rgba(134, 134, 139, 0.8)
+}
+
+.theme-dark .paddlenav .paddlenav-arrow:hover {
+  background-color: rgba(0, 0, 0, 0);
+  color: #86868b
+}
+
+.theme-dark .paddlenav .paddlenav-arrow:active {
+  background-color: rgba(0, 0, 0, 0);
+  color: #86868b
+}
+
+.theme-dark .paddlenav .paddlenav-arrow:focus[data-focus-method="mouse"]:not(input):not(textarea):not(select):hover,
+.theme-dark .paddlenav .paddlenav-arrow:focus[data-focus-method="touch"]:not(input):not(textarea):not(select):hover {
+  background-color: rgba(0, 0, 0, 0);
+  color: #86868b
+}
+
+.theme-dark .paddlenav .paddlenav-arrow:focus[data-focus-method="mouse"]:not(input):not(textarea):not(select):active,
+.theme-dark .paddlenav .paddlenav-arrow:focus[data-focus-method="touch"]:not(input):not(textarea):not(select):active {
+  background-color: rgba(0, 0, 0, 0);
+  color: #86868b
+}
+
+.theme-dark .paddlenav-framed .paddlenav-arrow {
+  background-color: rgba(210, 210, 215, 0.2);
+  color: rgba(134, 134, 139, 0.8)
+}
+
+.theme-dark .paddlenav-framed .paddlenav-arrow:hover {
+  background-color: rgba(210, 210, 215, 0.28);
+  color: #86868b
+}
+
+.theme-dark .paddlenav-framed .paddlenav-arrow:active {
+  background-color: rgba(210, 210, 215, 0.36);
+  color: #86868b
+}
+
+.theme-dark .paddlenav-framed .paddlenav-arrow:focus[data-focus-method="mouse"]:not(input):not(textarea):not(select):hover,
+.theme-dark .paddlenav-framed .paddlenav-arrow:focus[data-focus-method="touch"]:not(input):not(textarea):not(select):hover {
+  background-color: rgba(210, 210, 215, 0.28);
+  color: #86868b
+}
+
+.theme-dark .paddlenav-framed .paddlenav-arrow:focus[data-focus-method="mouse"]:not(input):not(textarea):not(select):active,
+.theme-dark .paddlenav-framed .paddlenav-arrow:focus[data-focus-method="touch"]:not(input):not(textarea):not(select):active {
+  background-color: rgba(210, 210, 215, 0.36);
+  color: #86868b
+}
+
+.theme-dark .quote .quote-copy {
+  color: #f5f5f7
+}
+
+.theme-dark .quote .quote-credit,
+.theme-dark .quote .quote-subcredit {
+  color: #f5f5f7
+}
+
+.theme-dark .sosumi {
+  color: #6e6e73
+}
+
+.theme-dark .sosumi a {
+  color: #a1a1a6
+}
+
+.theme-dark .violator {
+  background: rgba(0, 0, 0, 0);
+  border-color: #f56300;
+  color: #f56300
+}
+
+.theme-dark .violator-frameless {
+  background: rgba(0, 0, 0, 0);
+  border-color: #f56300;
+  color: #f56300
+}
+
+.theme-dark .violator-secondary {
+  background: rgba(0, 0, 0, 0);
+  border-color: #86868b;
+  color: #86868b
+}
+
+
+.tertiarynav {
+  margin: 36px auto 50px
+}
+
+.tertiarynav .component-content {
+  border-top: 1px solid #d2d2d7
+}
+
+.theme-dark .tertiarynav .component-content {
+  border-top-color: #424245
 }
