--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -5,7 +5,7 @@ import "../styles/global.css";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 ---
 
-<html lang="en" class="js no-touch  progressive-image  no-reduced-motion progressive ">
+<html class="js no-touch  progressive-image  no-reduced-motion progressive" lang="zh-CN" dir="ltr">
   <head>
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
   </head>
