--- a/src/layouts/MarkdownPost.astro
+++ b/src/layouts/MarkdownPost.astro
@@ -1,45 +1,48 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+
+import { formatDate } from "../utils";
+import { SITE_TITLE } from "../consts";
 const { frontmatter } = Astro.props;
+const type = frontmatter.tags[0];
+const { pubDate, title, description, featured} = frontmatter;
+const dateFormated = formatDate(pubDate);
 ---
 
 <html lang="zh-CN" dir="ltr" class="js no-touch progressive-image no-reduced-motion progressive">
   <head>
-    <BaseHead title={frontmatter.title} description={frontmatter.description} image={frontmatter.image.square} />
+    <BaseHead title={`${title} - ${SITE_TITLE}`} description={description} image={frontmatter.image.square} />
   </head>
   <body class:list={["page-article", { "theme-dark": frontmatter.theme === "dark" }]}>
     <Header />
     <main id="main" class="main">
       <section>
         <article class="article">
-          <div class="featured-header">
-
+          <div class:list={[{"featured-header": featured, "article-header": !featured}]}>
             <div class="category component">
               <div class="component-content">
                 <div class="category-eyebrow">
-                  <span class="category-eyebrow__category category_original">特写</span>
-
-                  <span class="category-eyebrow__date">2022 年 4 月 21 日</span>
+                  <span class="category-eyebrow__category category_original">{type}</span>
+                  <span class="category-eyebrow__date">{dateFormated}</span>
                 </div>
               </div>
             </div>
-
             <div class="pagetitle component">
               <div class="component-content">
-                <h1 class="hero-headline">从农场到海洋：保育红树林，维系当地人生计，保护地球</h1>
+                <h1 class="hero-headline">{title}</h1>
               </div>
             </div>
-
-            <div class="featured-subhead component">
-              <div class="component-content">Apple 与 Applied Environmental Research Foundation 合作，将促进印度马哈拉施特拉邦红树林的保育工作</div>
+            <div class:list={["component", {"featured-subhead": featured, "article-subhead":!featured}]}>
+              <div class="component-content">{description}</div>
             </div>
-
           </div>
           <slot />
         </article>
       </section>
     </main>
+    <Footer/>
     <script>
       import "../scripts/loadimage.js";
     </script>
