--- a/src/layouts/MarkdownPost.astro
+++ b/src/layouts/MarkdownPost.astro
@@ -7,7 +7,7 @@ import { formatDate } from "../utils";
 import { SITE_TITLE } from "../consts";
 const { frontmatter } = Astro.props;
 const type = frontmatter.tags[0];
-const { pubDate, title, description, featured} = frontmatter;
+const { pubDate, title, description, featured } = frontmatter;
 const dateFormated = formatDate(pubDate);
 ---
 
@@ -20,7 +20,7 @@ const dateFormated = formatDate(pubDate);
     <main id="main" class="main">
       <section>
         <article class="article">
-          <div class:list={[{"featured-header": featured, "article-header": !featured}]}>
+          <div class:list={[{ "featured-header": featured, "article-header": !featured }]}>
             <div class="category component">
               <div class="component-content">
                 <div class="category-eyebrow">
@@ -34,17 +34,43 @@ const dateFormated = formatDate(pubDate);
                 <h1 class="hero-headline">{title}</h1>
               </div>
             </div>
-            <div class:list={["component", {"featured-subhead": featured, "article-subhead":!featured}]}>
+            <div class:list={[{ "featured-subhead": featured, "article-subhead": !featured }, "component"]}>
               <div class="component-content">{description}</div>
+            </div>
+
+            <div class:list={["tagssheet component"]}>
+              <div class="component-content">
+                {
+                  frontmatter.tags.map((tag) => {
+                    return (
+                      <a href={`/tags/${tag}`} class="tag">
+                        {tag}
+                      </a>
+                    );
+                  })
+                }
+              </div>
             </div>
           </div>
           <slot />
+          <div class="component">
+            <div class="component-content">
+              <div class="article-copyright">
+                <a class="content" href="https://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh" target="_blank"
+                  >版权声明：自由转载-非商用-非衍生-保持署名（创意共享3.0许可证）</a
+                >
+                <p class="content">作者： {frontmatter.author} 发表日期：{dateFormated}</p>
+              </div>
+            </div>
+          </div>
         </article>
       </section>
     </main>
-    <Footer/>
-    <script>
-      import "../scripts/loadimage.js";
+    <Footer />
+    <script is:inline>
+      var script = document.createElement("script");
+      script.src = "/static/js/initPost.js";
+      document.head.appendChild(script);
     </script>
   </body>
 </html>
