--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import Tile from "../layouts/Tile.astro";
 import MoreTile from "../layouts/MoreTile.astro";
 const allPosts = await Astro.glob("../pages/posts/*.md");
+allPosts.sort((a, b) => Date.parse(b.frontmatter.pubDate) - Date.parse(a.frontmatter.pubDate));
 ---
 
 <BaseLayout>
@@ -10,30 +11,32 @@ const allPosts = await Astro.glob("../pages/posts/*.md");
     <div class="section-content">
       <h2 class="section-head">最新文章</h2>
       <ul role="list" class="section-tiles">
-        <Tile
-          title="iPad 助力中国餐饮零售行业焕发新生"
-          href="/about"
-          date="2022-09-01"
-          tags={["测试"]}
-          cover="https://www.apple.com.cn/newsroom/cn/images/product/ipad/lifestyle/Apple_iPad-is-transforming-retail-and-food-service-in-China_Staff-serving-customers-with-FLIPOS-on-iPad_01282023_Full-Bleed-Image.jpg.large_2x.jpg"
-          level="1"
-        />
-        <Tile
-          title="iPad 助力中国餐饮零售行业焕发新生"
-          href="/about"
-          date="2022-09-01"
-          tags={["测试"]}
-          cover="https://www.apple.com.cn/newsroom/cn/images/product/ipad/lifestyle/Apple_iPad-is-transforming-retail-and-food-service-in-China_Staff-serving-customers-with-FLIPOS-on-iPad_01282023_Full-Bleed-Image.jpg.large_2x.jpg"
-          level="2"
-        />
-        <Tile
-          title="iPad 助力中国餐饮零售行业焕发新生"
-          href="/about"
-          date="2022-09-01"
-          tags={["测试"]}
-          cover="https://www.apple.com.cn/newsroom/cn/images/product/ipad/lifestyle/Apple_iPad-is-transforming-retail-and-food-service-in-China_Staff-serving-customers-with-FLIPOS-on-iPad_01282023_Full-Bleed-Image.jpg.large_2x.jpg"
-          level="2"
-        />
+        {
+          // tile-hero
+          allPosts.slice(0, 1).map((post) => {
+            return (
+              <Tile title={post.frontmatter.title} href={post.url} date={post.frontmatter.pubDate} tags={post.frontmatter.tags} cover={post.frontmatter.cover.url} level="1" />
+            );
+          })
+        }
+
+        {
+          // tile-2up
+          allPosts.slice(1, 5).map((post) => {
+            return (
+              <Tile title={post.frontmatter.title} href={post.url} date={post.frontmatter.pubDate} tags={post.frontmatter.tags} cover={post.frontmatter.cover.url} level="2" />
+            );
+          })
+        }
+
+        {
+          // tile-3up
+          allPosts.slice(5, 11).map((post) => {
+            return (
+              <Tile title={post.frontmatter.title} href={post.url} date={post.frontmatter.pubDate} tags={post.frontmatter.tags} cover={post.frontmatter.cover.url} level="3" />
+            );
+          })
+        }
       </ul>
     </div>
   </section>
@@ -41,40 +44,19 @@ const allPosts = await Astro.glob("../pages/posts/*.md");
   <section class="more-from-newsroom">
     <div class="section-content">
       <h2 class="section-head">更多文章</h2>
-      <ul role="list" class="section-tiles">
-        <MoreTile
-          title="iPad 助力中国餐饮零售行业焕发新生"
-          href="/about"
-          date="2022-09-01"
-          tags={["测试"]}
-          cover="https://www.apple.com.cn/newsroom/cn/images/product/ipad/lifestyle/Apple_iPad-is-transforming-retail-and-food-service-in-China_Staff-serving-customers-with-FLIPOS-on-iPad_01282023_Full-Bleed-Image.jpg.large_2x.jpg"
-          level="2"
-        />
-        <MoreTile
-          title="iPad 助力中国餐饮零售行业焕发新生"
-          href="/about"
-          date="2022-09-01"
-          tags={["测试"]}
-          cover="https://www.apple.com.cn/newsroom/cn/images/product/ipad/lifestyle/Apple_iPad-is-transforming-retail-and-food-service-in-China_Staff-serving-customers-with-FLIPOS-on-iPad_01282023_Full-Bleed-Image.jpg.large_2x.jpg"
-          level="2"
-        />
+   
 
-        <MoreTile
-          title="iPad 助力中国餐饮零售行业焕发新生"
-          href="/about"
-          date="2022-09-01"
-          tags={["测试"]}
-          cover="https://www.apple.com.cn/newsroom/cn/images/product/ipad/lifestyle/Apple_iPad-is-transforming-retail-and-food-service-in-China_Staff-serving-customers-with-FLIPOS-on-iPad_01282023_Full-Bleed-Image.jpg.large_2x.jpg"
-          level="2"
-        />
-        <MoreTile
-          title="iPad 助力中国餐饮零售行业焕发新生"
-          href="/about"
-          date="2022-09-01"
-          tags={["测试"]}
-          cover="https://www.apple.com.cn/newsroom/cn/images/product/ipad/lifestyle/Apple_iPad-is-transforming-retail-and-food-service-in-China_Staff-serving-customers-with-FLIPOS-on-iPad_01282023_Full-Bleed-Image.jpg.large_2x.jpg"
-          level="2"
-        />
+      <ul role="list" class="section-tiles">
+
+        {
+          // tile-2up
+          allPosts.slice(0, 6).map((post) => {
+            return (
+              <MoreTile title={post.frontmatter.title} href={post.url} date={post.frontmatter.pubDate} tags={post.frontmatter.tags} cover={post.frontmatter.cover.url} />
+            );
+          })
+        }
+ 
       </ul>
       <div class="view-archive-wrapper">
         <a href="/newsroom/archive/" class="cta-primary-light" data-analytics-region="router" data-analytics-title="view archive">阅读历史文章</a>
@@ -87,7 +69,7 @@ const allPosts = await Astro.glob("../pages/posts/*.md");
       var script = document.createElement("script");
       script.src = "/static/js/lazyload.js";
       document.head.appendChild(script);
-      
+
       script.onload = function () {
         console.log("lazyload.js loaded");
         // when layout is loaded, load the images
