--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -16,7 +16,7 @@ import { SITE_TITLE } from "../consts";
             <a href="/about" class="nav-item-content">关于</a>
           </div>
           <div class="nav-item-wrapper">
-            <a href="/rss" class="nav-item-content">RSS</a>
+            <a href="/rss.xml" class="nav-item-content" target="_blank">RSS</a>
           </div>
         </div>
       </div>
