fix some issues

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,7 @@
 ---
-
 import { SITE_TITLE, SITE_EMAIL } from "../consts";
 const { theme } = Astro.props;
-const {hostname} = Astro.url;
+import { SITE_NAME } from "../consts";
 const date = new Date();
 const year = date.getFullYear();
 ---
@@ -14,7 +13,7 @@ const year = date.getFullYear();
         <div class="foot-nav-items">
           <div class="item">
             <div class="logo">{SITE_TITLE}</div>
-            <div class="email">Email: { SITE_EMAIL }</div>
+            <div class="email">Email: {SITE_EMAIL}</div>
           </div>
 
           <div class="item products">
@@ -35,11 +34,13 @@ const year = date.getFullYear();
             <div class="item-title">友链</div>
             <a href="https://the.top">THE.TOP</a>
           </div>
-
         </div>
       </div>
       <div class="bottom">
-        <div class="copyright">Copyright &copy; {`2018-${year}  ${hostname}  All rights reserved.`}</div>
+        <div class="copyright">
+          {`2018-${year}  ${SITE_NAME}`} 
+          <a href="//github.com/austin2035/astro-air-blog">Astro Air Blog</a>
+        </div>
       </div>
     </div>
   </div>
